[BUGFIX] select2 drop down z-index

--- a/js/select2/select2.css
+++ b/js/select2/select2.css
@@ -131,7 +131,7 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
     width: 100%;
     margin-top: -1px;
     position: absolute;
-    z-index: 9999;
+    z-index: 999999;
     top: 100%;
 
     background: #fff;
